# nixos-lite

./: LICENSE  README.md  overlay.nix
examples/: default.nix
examples/qemu/: config.nix  default.nix  kernel.nix
examples/qemu/big-rust-module/: default.nix
examples/qemu/big-rust-module/package/: Cargo.toml
examples/qemu/big-rust-module/package/src/: lib.rs
examples/qemu/big-rust-module/src/: Kbuild
examples/qemu/hello-module/: default.nix
examples/qemu/hello-module/src/: hello.c
examples/qemu/hello-rust-module/: default.nix
examples/qemu/hello-rust-module/src/: Kbuild  Makefile
examples/qemu/kernel/: default.nix  defconfig
modules/initramfs/: default.nix
pkgs/: README.md  default.nix  eval.nix
pkgs/dtb-helpers/: set-chosen.nix
pkgs/kconfig-common/: default.nix
pkgs/linux/: bindgen-0.65.1.nix  build-dtbs.nix  build-headers.nix  build-kernel.nix  default.nix  prepare-source.nix
pkgs/linux/config/: env.nix  make-allconfig.nix  make-olddefconfig.nix  make-savedefconfig.nix  modify-config.nix
pkgs/u-boot/: default.nix
