[package]
name = "big-rust-package"
version = "0.0.0"
edition = "2021"

[dependencies]
# regex = { version = "1.10", default-features = false }
# hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
hex = { version = "0.4.3", default-features = false }

[profile.kmod]
inherits = "release"
opt-level = 2
debug = 1
debug-assertions = false
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
